Fix bad character in title

--- a/DMTR-371.tex
+++ b/DMTR-371.tex
@@ -11,13 +11,13 @@
 
 \begin{document}
 
-\def\milestoneName{Data Management Acceptance Test Campaign #1}
+\def\milestoneName{Data Management Acceptance Test Campaign \#1}
 \def\milestoneId{LVV-P99}
 \def\product{Data Management}
 
 \setDocCompact{true}
 
-\title{LVV-P99 Data Management Acceptance Test Campaign #1 Test Plan and Report}
+\title{LVV-P99 Data Management Acceptance Test Campaign \#1 Test Plan and Report}
 \setDocRef{\lsstDocType-\lsstDocNum}
 \date{\vcsDate}
 \author{Jeff Carlin}
